[gd_scene load_steps=2 format=3 uid="uid://d8g3j5k7m9n1p"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_p7q8r"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_p7q8r")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "‚öôÔ∏è SETTINGS - PLACEHOLDER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="AudioSection" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "üîä AUDIO"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MainPanel/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="MainPanel/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0

[node name="SFXVolumeContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MainPanel/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="MainPanel/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0

[node name="MusicVolumeContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MainPanel/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="MainPanel/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="VideoSection" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "üñ•Ô∏è VIDEO"

[node name="FullscreenCheck" type="CheckBox" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VSyncCheck" type="CheckBox" parent="MainPanel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "VSync"

[node name="HSeparator3" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="PlaceholderNote" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "üìù Note: This is a placeholder settings menu.
Future versions will include functional settings,
save/load functionality, and more options."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üîô Back"

[node name="DefaultsButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üîÑ Defaults"

[node name="ApplyButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚úÖ Apply"

[connection signal="value_changed" from="MainPanel/VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="MainPanel/VBoxContainer/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="value_changed" from="MainPanel/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="toggled" from="MainPanel/VBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="MainPanel/VBoxContainer/VSyncCheck" to="." method="_on_vsync_toggled"]
[connection signal="pressed" from="MainPanel/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/ButtonContainer/DefaultsButton" to="." method="_on_defaults_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/ButtonContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
