# ==============================================================================
# SETTINGS MENU - PLACEHOLDER
# ==============================================================================
# Purpose: Game settings and configuration menu
# 
# CURRENT STATUS: PLACEHOLDER - Basic UI with no functional settings yet
# 
# PLANNED FEATURES:
# - Audio volume controls (Master, SFX, Music)
# - Video settings (Resolution, Fullscreen, VSync)
# - Input/Control configuration
# - Gameplay settings (difficulty, UI scale)
# - Language selection
#
# USAGE:
# - Accessible from Main Menu or Pause Menu
# - Changes are applied immediately (when implemented)
# - Back button returns to previous menu
#
# TODO: Implement actual settings functionality and persistence
# ==============================================================================

extends Control

# ------------------------------------------------------------------------------
# MEMBER VARIABLES
# ------------------------------------------------------------------------------

## Reference to the main scene manager for transitions
var main_scene_manager: Node

## Store which menu called this settings menu (for proper back navigation)
var calling_menu: String = "res://ui/MainMenu.tscn"

# ------------------------------------------------------------------------------
# PLACEHOLDER SETTINGS VALUES
# ------------------------------------------------------------------------------

## Audio settings (placeholder values)
var master_volume: float = 1.0
var sfx_volume: float = 1.0
var music_volume: float = 1.0

## Video settings (placeholder values)
var fullscreen_enabled: bool = false
var vsync_enabled: bool = true
var resolution_index: int = 1  # 0=1280x720, 1=1920x1080, etc.

# ------------------------------------------------------------------------------
# GODOT LIFECYCLE METHODS
# ------------------------------------------------------------------------------

## Initialize the settings menu
func _ready():
	# Get reference to the main scene manager
	main_scene_manager = get_tree().root.get_node("Main")
	
	print("=== SETTINGS MENU LOADED ===")
	print("This is a placeholder settings menu.")
	print("Future: Audio, video, and gameplay settings")
	
	# TODO: Load saved settings from file
	load_settings()

# ------------------------------------------------------------------------------
# BUTTON SIGNAL HANDLERS
# ------------------------------------------------------------------------------

## Return to the previous menu (Main Menu or Pause Menu)
func _on_back_button_pressed() -> void:
	print("Returning to previous menu...")
	# TODO: Remember which menu opened settings and return there
	main_scene_manager.load_menu(calling_menu)

## Apply current settings (placeholder)
func _on_apply_button_pressed() -> void:
	print("Applying settings...")
	apply_settings()
	print("Settings applied! (placeholder)")

## Reset all settings to defaults (placeholder)
func _on_defaults_button_pressed() -> void:
	print("Resetting to default settings...")
	reset_to_defaults()
	print("Settings reset to defaults! (placeholder)")

# ------------------------------------------------------------------------------
# PLACEHOLDER SLIDER HANDLERS
# ------------------------------------------------------------------------------

## Handle master volume changes
func _on_master_volume_changed(value: float) -> void:
	master_volume = value
	print("Master Volume: ", value)
	# TODO: Apply to AudioServer

## Handle SFX volume changes  
func _on_sfx_volume_changed(value: float) -> void:
	sfx_volume = value
	print("SFX Volume: ", value)
	# TODO: Apply to SFX audio bus

## Handle music volume changes
func _on_music_volume_changed(value: float) -> void:
	music_volume = value
	print("Music Volume: ", value)
	# TODO: Apply to Music audio bus

# ------------------------------------------------------------------------------
# PLACEHOLDER CHECKBOX HANDLERS
# ------------------------------------------------------------------------------

## Handle fullscreen toggle
func _on_fullscreen_toggled(button_pressed: bool) -> void:
	fullscreen_enabled = button_pressed
	print("Fullscreen: ", button_pressed)
	# TODO: Apply fullscreen setting

## Handle VSync toggle
func _on_vsync_toggled(button_pressed: bool) -> void:
	vsync_enabled = button_pressed
	print("VSync: ", button_pressed)
	# TODO: Apply VSync setting

# ------------------------------------------------------------------------------
# SETTINGS MANAGEMENT METHODS
# ------------------------------------------------------------------------------

## Load settings from file or use defaults
## TODO: Implement actual settings loading
func load_settings():
	print("Loading settings... (placeholder)")
	# TODO: Load from user://settings.cfg or similar

## Apply current settings to the game
## TODO: Implement actual settings application
func apply_settings():
	print("Applying settings...")
	print("  Master Volume: ", master_volume)
	print("  SFX Volume: ", sfx_volume)
	print("  Music Volume: ", music_volume)
	print("  Fullscreen: ", fullscreen_enabled)
	print("  VSync: ", vsync_enabled)
	
	# TODO: Apply to actual game systems
	save_settings()

## Save current settings to file
## TODO: Implement actual settings saving
func save_settings():
	print("Saving settings... (placeholder)")
	# TODO: Save to user://settings.cfg

## Reset all settings to default values
## TODO: Implement actual defaults restoration
func reset_to_defaults():
	master_volume = 1.0
	sfx_volume = 1.0
	music_volume = 1.0
	fullscreen_enabled = false
	vsync_enabled = true
	resolution_index = 1
	
	# TODO: Update UI elements to reflect defaults
	print("Settings reset to defaults")

## Set which menu to return to when back is pressed
## @param menu_path: String path to the calling menu scene
func set_calling_menu(menu_path: String):
	calling_menu = menu_path
	print("Calling menu set to: ", menu_path)
